# pp

./: .hlint.yaml  flake.nix  haskell-template.cabal  justfile  pp.cabal
PP Exam 100124/: solutions.hs
src/: Lecture1.hs  Lecture10.hs  Lecture11.hs  Lecture12.hs  Lecture13.hs  Lecture2.hs  Lecture3.hs  Lecture4.hs  Lecture5.hs  Lecture6.hs  Lecture7.hs  Lecture9.hs  Project.hs  TMorris.hs
