cabal-version:      2.4
name:               pp
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web
homepage:           https://githum.com/BenjaminCB/pp

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:

  -wall -Wincomplete-patterns

  default-extensions:
    OverloadedStrings
    TupleSections

  build-depends:      base,
                      mtl,
                      transformers
  hs-source-dirs:     src
  default-language:   Haskell2010
  import:             shared
  main-is:            Main.hs

executable lecture1
  import:  shared
  main-is: Lecture1.hs

executable lecture2
  import:  shared
  main-is: Lecture2.hs

executable lecture3
  import:  shared
  main-is: Lecture3.hs

executable lecture4
  import:  shared
  main-is: Lecture4.hs

executable lecture5
  import:  shared
  main-is: Lecture5.hs

executable lecture6
  import:  shared
  main-is: Lecture6.hs

executable lecture7
  import:  shared
  main-is: Lecture7.hs

executable lecture9
  import:  shared
  main-is: Lecture9.hs

executable lecture10
  import:  shared
  main-is: Lecture10.hs

executable project
  import:  shared
  main-is: Project.hs
